<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="395sp"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/SignUP"
            android:textColor="@color/black"
            android:textSize="75sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:fontFamily="casual"
            android:text="@string/signupIntro"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:orientation="horizontal" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/person"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/favfood"
            android:drawableStart="@drawable/ic_local_pizza_black_24dp"/>



        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/Register_SignUp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>